--- a/research/data_ingestion.ipynb
+++ b/research/data_ingestion.ipynb
@@ -174,55 +174,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-01-16 22:17:41,760: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-01-16 22:17:41,764: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-01-16 22:17:41,766: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2024-01-16 22:17:41,768: INFO: common: created directory at: artifacts]\n",
-      "[2024-01-16 22:17:41,770: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2024-01-16 22:17:44,800: INFO: 2366278714: artifacts/data_ingestion/data.zip download! with following info: \n",
-      "Server: GitHub.com\n",
-      "Date: Tue, 16 Jan 2024 16:47:43 GMT\n",
-      "Content-Type: text/html; charset=utf-8\n",
-      "Vary: X-PJAX, X-PJAX-Container, Turbo-Visit, Turbo-Frame, Accept-Encoding, Accept, X-Requested-With\n",
-      "ETag: W/\"3f65d0ce2092b9d8090f26209bca1e99\"\n",
-      "Cache-Control: max-age=0, private, must-revalidate\n",
-      "Strict-Transport-Security: max-age=31536000; includeSubdomains; preload\n",
-      "X-Frame-Options: deny\n",
+      "[2024-01-25 00:30:42,589: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-01-25 00:30:42,593: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-01-25 00:30:42,597: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2024-01-25 00:30:42,599: INFO: common: created directory at: artifacts]\n",
+      "[2024-01-25 00:30:42,602: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2024-01-25 00:30:44,705: INFO: 2366278714: artifacts/data_ingestion/data.zip download! with following info: \n",
+      "Connection: close\n",
+      "Content-Length: 23329\n",
+      "Cache-Control: max-age=300\n",
+      "Content-Security-Policy: default-src 'none'; style-src 'unsafe-inline'; sandbox\n",
+      "Content-Type: application/zip\n",
+      "ETag: \"c69888a4ae59bc5a893392785a938ccd4937981c06ba8a9d6a21aa52b4ab5b6e\"\n",
+      "Strict-Transport-Security: max-age=31536000\n",
       "X-Content-Type-Options: nosniff\n",
-      "X-XSS-Protection: 0\n",
-      "Referrer-Policy: no-referrer-when-downgrade\n",
-      "Content-Security-Policy: default-src 'none'; base-uri 'self'; child-src github.com/assets-cdn/worker/ gist.github.com/assets-cdn/worker/; connect-src 'self' uploads.github.com www.githubstatus.com collector.github.com raw.githubusercontent.com api.github.com github-cloud.s3.amazonaws.com github-production-repository-file-5c1aeb.s3.amazonaws.com github-production-upload-manifest-file-7fdce7.s3.amazonaws.com github-production-user-asset-6210df.s3.amazonaws.com cdn.optimizely.com logx.optimizely.com/v1/events api.githubcopilot.com objects-origin.githubusercontent.com *.actions.githubusercontent.com wss://*.actions.githubusercontent.com productionresultssa0.blob.core.windows.net/ productionresultssa1.blob.core.windows.net/ productionresultssa2.blob.core.windows.net/ productionresultssa3.blob.core.windows.net/ productionresultssa4.blob.core.windows.net/ productionresultssa5.blob.core.windows.net/ productionresultssa6.blob.core.windows.net/ productionresultssa7.blob.core.windows.net/ productionresultssa8.blob.core.windows.net/ productionresultssa9.blob.core.windows.net/ github-production-repository-image-32fea6.s3.amazonaws.com github-production-release-asset-2e65be.s3.amazonaws.com insights.github.com wss://alive.github.com; font-src github.githubassets.com; form-action 'self' github.com gist.github.com objects-origin.githubusercontent.com; frame-ancestors 'none'; frame-src viewscreen.githubusercontent.com notebooks.githubusercontent.com support.github.com; img-src 'self' data: github.githubassets.com media.githubusercontent.com camo.githubusercontent.com identicons.github.com avatars.githubusercontent.com github-cloud.s3.amazonaws.com objects.githubusercontent.com secured-user-images.githubusercontent.com/ user-images.githubusercontent.com/ private-user-images.githubusercontent.com opengraph.githubassets.com github-production-user-asset-6210df.s3.amazonaws.com customer-stories-feed.github.com spotlights-feed.github.com objects-origin.githubusercontent.com *.githubusercontent.com; manifest-src 'self'; media-src github.com user-images.githubusercontent.com/ secured-user-images.githubusercontent.com/ private-user-images.githubusercontent.com github-production-user-asset-6210df.s3.amazonaws.com gist.github.com; script-src github.githubassets.com; style-src 'unsafe-inline' github.githubassets.com; upgrade-insecure-requests; worker-src github.com/assets-cdn/worker/ gist.github.com/assets-cdn/worker/\n",
-      "Set-Cookie: _gh_sess=o2PojIaSZjRhNoddrfcUGUws3KE6WJEsy1qDTkYsg4nKl%2B5QxfvMQmqmH0%2BwOoHXiLw3q55DLSucgyPLcT%2FW852PfupXDjazIUkshZs5b41IfRd6fnFsMzL%2B51Pxt%2F3T3VcIGwybUeTLTpNpjiajNUtQrKoX6PItec%2FJ4wrqof6iVg%2FIgKDJCtNo8hBjjnj%2B6%2FnuGzLLY0%2FVLnCrlY27M2aMzdEndB%2F4CGjpjZEejnwMRfGuihJKJhK%2BS%2BwO7qRUGspy9IZa5ep5SCTck7CryA%3D%3D--lXfDnhWvyM%2BW8YQz--KR%2FRNRFXdOk0K5bhKwlPvw%3D%3D; Path=/; HttpOnly; Secure; SameSite=Lax\n",
-      "Set-Cookie: _octo=GH1.1.689268446.1705423662; Path=/; Domain=github.com; Expires=Thu, 16 Jan 2025 16:47:42 GMT; Secure; SameSite=Lax\n",
-      "Set-Cookie: logged_in=no; Path=/; Domain=github.com; Expires=Thu, 16 Jan 2025 16:47:42 GMT; HttpOnly; Secure; SameSite=Lax\n",
+      "X-Frame-Options: deny\n",
+      "X-XSS-Protection: 1; mode=block\n",
+      "X-GitHub-Request-Id: 6628:0D47:4DF95E:5D83E8:65B15DCD\n",
       "Accept-Ranges: bytes\n",
-      "Transfer-Encoding: chunked\n",
-      "X-GitHub-Request-Id: EE7C:1B00FF:45527B:49DD50:65A6B32E\n",
-      "connection: close\n",
+      "Date: Wed, 24 Jan 2024 19:00:44 GMT\n",
+      "Via: 1.1 varnish\n",
+      "X-Served-By: cache-maa10250-MAA\n",
+      "X-Cache: HIT\n",
+      "X-Cache-Hits: 1\n",
+      "X-Timer: S1706122845.875307,VS0,VE1\n",
+      "Vary: Authorization,Accept-Encoding,Origin\n",
+      "Access-Control-Allow-Origin: *\n",
+      "Cross-Origin-Resource-Policy: cross-origin\n",
+      "X-Fastly-Request-ID: 130f60fd86512627b7abb7ceb8c5b1e8f36c1566\n",
+      "Expires: Wed, 24 Jan 2024 19:05:44 GMT\n",
+      "Source-Age: 142\n",
       "\n",
       "]\n"
-     ]
-    },
-    {
-     "ename": "BadZipFile",
-     "evalue": "File is not a zip file",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mBadZipFile\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[11], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m     data_ingestion\u001b[38;5;241m.\u001b[39mextract_zip_file()\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m----> 8\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
-      "Cell \u001b[1;32mIn[11], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m     data_ingestion \u001b[38;5;241m=\u001b[39m DataIngestion(config\u001b[38;5;241m=\u001b[39mdata_ingestion_config)\n\u001b[0;32m      5\u001b[0m     data_ingestion\u001b[38;5;241m.\u001b[39mdownload_file()\n\u001b[1;32m----> 6\u001b[0m     \u001b[43mdata_ingestion\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mextract_zip_file\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
-      "Cell \u001b[1;32mIn[9], line 27\u001b[0m, in \u001b[0;36mDataIngestion.extract_zip_file\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     25\u001b[0m unzip_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig\u001b[38;5;241m.\u001b[39munzip_dir\n\u001b[0;32m     26\u001b[0m os\u001b[38;5;241m.\u001b[39mmakedirs(unzip_path, exist_ok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m---> 27\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[43mzipfile\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mZipFile\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconfig\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlocal_data_file\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m zip_ref:\n\u001b[0;32m     28\u001b[0m     zip_ref\u001b[38;5;241m.\u001b[39mextractall(unzip_path)\n",
-      "File \u001b[1;32mc:\\Users\\karba\\.conda\\envs\\mlproj\\Lib\\zipfile.py:1302\u001b[0m, in \u001b[0;36mZipFile.__init__\u001b[1;34m(self, file, mode, compression, allowZip64, compresslevel, strict_timestamps, metadata_encoding)\u001b[0m\n\u001b[0;32m   1300\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m   1301\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m mode \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m-> 1302\u001b[0m         \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_RealGetContents\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1303\u001b[0m     \u001b[38;5;28;01melif\u001b[39;00m mode \u001b[38;5;129;01min\u001b[39;00m (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m   1304\u001b[0m         \u001b[38;5;66;03m# set the modified flag so central directory gets written\u001b[39;00m\n\u001b[0;32m   1305\u001b[0m         \u001b[38;5;66;03m# even if no files are added to the archive\u001b[39;00m\n\u001b[0;32m   1306\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_didModify \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\karba\\.conda\\envs\\mlproj\\Lib\\zipfile.py:1369\u001b[0m, in \u001b[0;36mZipFile._RealGetContents\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1367\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m BadZipFile(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFile is not a zip file\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   1368\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m endrec:\n\u001b[1;32m-> 1369\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m BadZipFile(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFile is not a zip file\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   1370\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdebug \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   1371\u001b[0m     \u001b[38;5;28mprint\u001b[39m(endrec)\n",
-      "\u001b[1;31mBadZipFile\u001b[0m: File is not a zip file"
      ]
     }
    ],
